RESOLVED FIXED207234
macCatalyst: Shouldn't get text cursor on checkboxes
https://bugs.webkit.org/show_bug.cgi?id=207234
Summary macCatalyst: Shouldn't get text cursor on checkboxes
Tim Horton
Reported 2020-02-04 15:13:33 PST
macCatalyst: Shouldn't get text cursor on checkboxes
Attachments
Patch (4.19 KB, patch)
2020-02-04 15:14 PST, Tim Horton
wenson_hsieh: review+
Tim Horton
Comment 1 2020-02-04 15:14:48 PST
Wenson Hsieh
Comment 2 2020-02-04 15:27:02 PST
Comment on attachment 389721 [details] Patch r=me with the merge conflict fix
Tim Horton
Comment 3 2020-02-04 15:44:00 PST
Radar WebKit Bug Importer
Comment 4 2020-02-04 15:44:18 PST
Note You need to log in before you can comment on or make changes to this bug.