Cherry-pick r255710. rdar://problem/59299340

macCatalyst: Shouldn't get text cursor on checkboxes
    https://bugs.webkit.org/show_bug.cgi?id=207234
    <rdar://problem/59155917>

    Reviewed by Wenson Hsieh.

    * WebProcess/WebPage/ios/WebPageIOS.mm:
    (WebKit::canForceCaretForPosition):
    (WebKit::populateCaretContext):
    (WebKit::lineCaretExtent): Deleted.
    The I-beam forcing code was a bit too aggressive; it should consider
    the style of the node that it ends up finding after searching, not just
    assume it wants an I-beam because it's "texty".

    Canonical link: https://commits.webkit.org/220223@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@255710 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/218903.257@safari-609.1.17.0-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-609.1.17.0-branch@256548 268f45cc-cd09-0410-ab3c-d52691b4dbfc